# Autonomous_Research_Analyst

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  embeddings.py  main.py  observability.py
app/agents/: citation_validator.py  critic.py  planner.py  researcher.py  untrusted.py  writer.py
app/api/: auth.py  documents.py  progress.py  ratelimit.py  research.py
app/auth/: dependencies.py  utils.py
app/db/: init_db.py  models.py  schema.sql  session.py
app/graph/: build.py  runner.py  state.py
app/ingest/: chunking.py  store.py
app/llm/: provider.py
app/models/: evidence.py
app/retrieval/: rag.py  web.py
app/scoring/: ragas.py
eval/: __init__.py  compare.py  dataset.py  golden.jsonl  ingest_corpus.py  report.py  retrievability.py  run.py  runner.py  score.py
eval/corpus/: agent_architectures.md  llm_inference_optimization.md  prompt_grounding_citations.md  rag_evaluation.md  rag_overview.md  vector_search.md
eval/metrics/: __init__.py  artifacts.py  cost.py  deterministic.py  ragas_scorer.py
eval/results/: 20260608T142303Z.md  20260608T145138Z.md  20260608T152024Z.md  critic_loop_AB.md  critic_three_way.md  critic_tightened_vs_off.md  critic_tightened_vs_original.md  golden_dataset_eval.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DocumentUploadForm.tsx  HealthBadge.tsx  QuestionForm.tsx  ReportMarkdown.test.tsx  ReportMarkdown.tsx  ResearchPanel.tsx  RunHistory.tsx
frontend/src/context/: AuthContext.test.tsx  AuthContext.tsx
frontend/src/lib/: api.test.ts  api.ts  authFetch.ts  time.test.ts  time.ts
frontend/src/pages/: LoginPage.tsx
scripts/: run_once.py
tests/: conftest.py  test_auth_api.py  test_auth_dependencies.py  test_auth_utils.py  test_auth_validation.py  test_build.py  test_checkpointer.py  test_chunking.py  test_citation_validator.py  test_config.py  test_critic.py  test_document_upload.py  test_embeddings.py  test_eval_artifacts.py  test_eval_compare.py  test_eval_cost.py  test_eval_deterministic.py  test_eval_report.py  test_eval_retrievability.py  test_eval_runner.py  test_evidence.py  test_golden_dataset.py  test_graph_routing.py  test_ingest.py  test_init_db.py  test_planner.py  test_provider.py  test_rag.py  test_ratelimit.py  test_reliability.py  test_research_api.py  test_researcher.py  test_runner.py  test_schema.py  test_state.py  test_untrusted.py  test_web.py  test_writer.py
