[project]
name = "autonomous-research-analyst"
version = "0.1.0"
description = "Multi-agent autonomous research analyst (see PRD.md)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "tavily-python>=0.5",
    "langgraph>=0.6,<1",
    "langgraph-checkpoint-postgres>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]
# Eval-harness-only (host-side). NOT in the Docker image, NOT in runtime deps.
# `pip install -e ".[eval]"` to run the Ragas Score stage. Pins are deliberate:
# - ragas >=0.3 is broken against the langchain-community split (imports a removed
#   `chat_models.vertexai` module); 0.2.x is the last stable era.
# - The pre-1.0 langchain stack is what works with both ragas 0.2 and our
#   langgraph <1 runtime pin. The `langchain-classic` shim (auto-installed by
#   langchain>=1) must NOT be in the env (it conflicts with langchain-core <1).
eval = [
    "ragas>=0.2,<0.3",
    "langchain>=0.3,<1",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
